# TIDAL-Tampered_Image_Detection_And_Localization

./: .gitignore  .tmp_patch_notebooks.py  .vercelignore  CONTRIBUTING.md  Project_Lifecycle_Tracker.md  README.md  SECURITY.md  fix_denorm.py  pyproject.toml  requirements-prod.txt  requirements.txt
Audit of Reference Notebook/: Audit_v6-5-run-01.md
Audit_all_runs_till_vK.10.5/: Audit_vK7.1.md  Final_recommendations.md  Run_comparison_table.md
Audit_all_runs_till_vK.10.6/: Audit_vK10.6.md  Run_comparison_table.md
Audit_new_runs_vK11/: Audit_vk-11-1-run-01.md  Audit_vk-12-0-run-01.md  Audit_vk-12-0b-run-01.md  Project_Experiment_Evolution_Report.md
Best Notebooks/: Research Narrative — Complete Journey.md
Datasets/: Links-to-Datasets.md
Docs/: ARCHITECTURE.md  DEPLOYMENT.md  PRODUCTION_READINESS.md  Repository_Structure.md
Docs_vK4_Notebook_Audit/: 03_Model_Architecture_Review.md
New Research Approach/: CASIA-20-Image-Tampering-Dataset_Project_Audit.md  CASIA2 ELA CNN Image Tampering Detection.ipynb  ELA CNN Image Forgery Detection.ipynb  Research_Journey_and_Experimentation.md  Research_Paper_Analysis_Report.md  build_vr12.py  vK.12.0 Image Detection and Localisation.ipynb  vR.1.1 Image Detection and Localisation.ipynb  vR.1.4 ETASR Run-01 Image Detection and Localisation.ipynb  vR.1.5 ETASR Run-01 Image Detection and Localisation.ipynb  vR.1.7 ETASR Run-01 Image Detection and Localisation.ipynb  vR.ETASR Image Detection and Localisation.ipynb  vR.P.0 Image Detection and Localisation.ipynb  vR.P.1 Image Detection and Localisation.ipynb  vR.P.1.5 Image Detection and Localisation.ipynb  vR.P.10 Image Detection and Localisation.ipynb  vR.P.11 Image Detection and Localisation.ipynb  vR.P.12 Image Detection and Localisation.ipynb  vR.P.13 Image Detection and Localisation.ipynb  vR.P.14 Image Detection and Localisation.ipynb  vR.P.15 Image Detection and Localisation.ipynb  vR.P.16 Image Detection and Localisation.ipynb  vR.P.17 Image Detection and Localisation.ipynb  (+31 more)
(+1394 files in other folders)
